--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
+sudo: required
+services:
+- docker
+
 language: node_js
 node_js:
 - 6
+
+before_install:
+- sudo rm /usr/local/bin/docker-compose
+- curl -L https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+- chmod +x docker-compose
+- sudo mv docker-compose /usr/local/bin
 
 install:
 - npm install
